fix(s3stream): fix stream reader busy loop when metadata replay delay (#1215)
* fix(s3stream): fix stream reader busy loop when metadata replay delay

Signed-off-by: Robin Han <hanxvdovehx@gmail.com>

* fix(test): fix unit test

Signed-off-by: Robin Han <hanxvdovehx@gmail.com>

---------

Signed-off-by: Robin Han <hanxvdovehx@gmail.com>