@@ -19,6 +19,9 @@ package org.apache.kafka.image;
 
 import com.automq.stream.s3.metadata.S3StreamConstant;
 import com.automq.stream.s3.metadata.StreamState;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import org.apache.kafka.common.metadata.RangeRecord;
 import org.apache.kafka.common.metadata.RemoveRangeRecord;
 import org.apache.kafka.common.metadata.RemoveS3StreamObjectRecord;
@@ -32,13 +35,10 @@ import org.apache.kafka.metadata.stream.S3StreamObject;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
 import org.apache.kafka.server.common.MetadataVersion;
 import org.apache.kafka.server.common.automq.AutoMQVersion;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -59,16 +59,16 @@ public class S3StreamMetadataImageTest {
         S3StreamMetadataDelta delta0 = new S3StreamMetadataDelta(image0);
         // 1. create stream0
         delta0Records.add(new ApiMessageAndVersion(new S3StreamRecord()
-                .setStreamId(STREAM0)
-                .setRangeIndex(S3StreamConstant.INIT_RANGE_INDEX)
-                .setStreamState(StreamState.OPENED.toByte())
-                .setStartOffset(S3StreamConstant.INIT_START_OFFSET)
-                .setEpoch(0L)
-                .setStartOffset(0L), (short) 0));
+            .setStreamId(STREAM0)
+            .setRangeIndex(S3StreamConstant.INIT_RANGE_INDEX)
+            .setStreamState(StreamState.OPENED.toByte())
+            .setStartOffset(S3StreamConstant.INIT_START_OFFSET)
+            .setEpoch(0L)
+            .setStartOffset(0L), (short) 0));
         RecordTestUtils.replayAll(delta0, delta0Records);
         // verify delta and check image's write
         S3StreamMetadataImage image1 = new S3StreamMetadataImage(
-                STREAM0, 0L, StreamState.OPENED, S3StreamConstant.INIT_START_OFFSET, Collections.emptyList(), Collections.emptyList());
+            STREAM0, 0L, StreamState.OPENED, S3StreamConstant.INIT_START_OFFSET, Collections.emptyList(), Collections.emptyList());
         assertEquals(image1, delta0.apply());
         testToImageAndBack(image1);
 
@@ -77,22 +77,22 @@ public class S3StreamMetadataImageTest {
         List<ApiMessageAndVersion> delta1Records = new ArrayList<>();
         S3StreamMetadataDelta delta1 = new S3StreamMetadataDelta(image1);
         delta1Records.add(new ApiMessageAndVersion(new S3StreamRecord()
-                .setStreamId(STREAM0)
-                .setRangeIndex(S3StreamConstant.INIT_RANGE_INDEX)
-                .setStreamState(StreamState.OPENED.toByte())
-                .setStartOffset(S3StreamConstant.INIT_START_OFFSET)
-                .setEpoch(1L), (short) 0));
+            .setStreamId(STREAM0)
+            .setRangeIndex(S3StreamConstant.INIT_RANGE_INDEX)
+            .setStreamState(StreamState.OPENED.toByte())
+            .setStartOffset(S3StreamConstant.INIT_START_OFFSET)
+            .setEpoch(1L), (short) 0));
         delta1Records.add(new ApiMessageAndVersion(new RangeRecord()
-                .setStreamId(STREAM0)
-                .setRangeIndex(0)
-                .setEpoch(1L)
-                .setNodeId(BROKER0)
-                .setStartOffset(0L), (short) 0));
+            .setStreamId(STREAM0)
+            .setRangeIndex(0)
+            .setEpoch(1L)
+            .setNodeId(BROKER0)
+            .setStartOffset(0L), (short) 0));
         RecordTestUtils.replayAll(delta1, delta1Records);
         // verify delta and check image's write
         S3StreamMetadataImage image2 = new S3StreamMetadataImage(
-                STREAM0, 1L, StreamState.OPENED, S3StreamConstant.INIT_START_OFFSET,
-                List.of(new RangeMetadata(STREAM0, 1L, 0, 0L, 0L, BROKER0)), Collections.emptyList());
+            STREAM0, 1L, StreamState.OPENED, S3StreamConstant.INIT_START_OFFSET,
+            List.of(new RangeMetadata(STREAM0, 1L, 0, 0L, 0L, BROKER0)), Collections.emptyList());
         assertEquals(image2, delta1.apply());
         testToImageAndBack(image2);
 
@@ -100,24 +100,24 @@ public class S3StreamMetadataImageTest {
         List<ApiMessageAndVersion> delta2Records = new ArrayList<>();
         S3StreamMetadataDelta delta2 = new S3StreamMetadataDelta(image2);
         delta2Records.add(new ApiMessageAndVersion(new S3StreamRecord()
-                .setStreamId(STREAM0)
-                .setRangeIndex(0)
-                .setStreamState(StreamState.OPENED.toByte())
-                .setStartOffset(S3StreamConstant.INIT_START_OFFSET)
-                .setEpoch(2L), (short) 0));
+            .setStreamId(STREAM0)
+            .setRangeIndex(0)
+            .setStreamState(StreamState.OPENED.toByte())
+            .setStartOffset(S3StreamConstant.INIT_START_OFFSET)
+            .setEpoch(2L), (short) 0));
         delta2Records.add(new ApiMessageAndVersion(new RangeRecord()
-                .setStreamId(STREAM0)
-                .setRangeIndex(1)
-                .setEpoch(2L)
-                .setNodeId(BROKER1)
-                .setStartOffset(100L)
-                .setEndOffset(100L), (short) 0));
+            .setStreamId(STREAM0)
+            .setRangeIndex(1)
+            .setEpoch(2L)
+            .setNodeId(BROKER1)
+            .setStartOffset(100L)
+            .setEndOffset(100L), (short) 0));
         RecordTestUtils.replayAll(delta2, delta2Records);
         // verify delta and check image's write
         S3StreamMetadataImage image3 = new S3StreamMetadataImage(
-                STREAM0, 2L, StreamState.OPENED, 0L, List.of(
-                new RangeMetadata(STREAM0, 1L, 0, 0, 0, BROKER0),
-                new RangeMetadata(STREAM0, 2L, 1, 100, 100, BROKER1)), Collections.emptyList());
+            STREAM0, 2L, StreamState.OPENED, 0L, List.of(
+            new RangeMetadata(STREAM0, 1L, 0, 0, 0, BROKER0),
+            new RangeMetadata(STREAM0, 2L, 1, 100, 100, BROKER1)), Collections.emptyList());
         assertEquals(image3, delta2.apply());
         testToImageAndBack(image3);
 
@@ -125,45 +125,45 @@ public class S3StreamMetadataImageTest {
         List<ApiMessageAndVersion> delta3Records = new ArrayList<>();
         S3StreamMetadataDelta delta3 = new S3StreamMetadataDelta(image3);
         delta3Records.add(new ApiMessageAndVersion(new S3StreamRecord()
-                .setStreamId(STREAM0)
-                .setEpoch(2L)
-                .setRangeIndex(0)
-                .setStreamState(StreamState.OPENED.toByte())
-                .setStartOffset(100L), (short) 0));
+            .setStreamId(STREAM0)
+            .setEpoch(2L)
+            .setRangeIndex(0)
+            .setStreamState(StreamState.OPENED.toByte())
+            .setStartOffset(100L), (short) 0));
         delta3Records.add(new ApiMessageAndVersion(new RemoveRangeRecord()
-                .setStreamId(STREAM0)
-                .setRangeIndex(0), (short) 0));
+            .setStreamId(STREAM0)
+            .setRangeIndex(0), (short) 0));
         RecordTestUtils.replayAll(delta3, delta3Records);
         // verify delta and check image's write
         S3StreamMetadataImage image4 = new S3StreamMetadataImage(
-                STREAM0, 2L, StreamState.OPENED, 100L, List.of(
-                new RangeMetadata(STREAM0, 2L, 1, 100L, 100L, BROKER1)), Collections.emptyList());
+            STREAM0, 2L, StreamState.OPENED, 100L, List.of(
+            new RangeMetadata(STREAM0, 2L, 1, 100L, 100L, BROKER1)), Collections.emptyList());
         assertEquals(image4, delta3.apply());
     }
 
     @Test
     public void testStreamObjects() {
         S3StreamMetadataImage image0 = new S3StreamMetadataImage(
-                STREAM0, 0L, StreamState.OPENED, 0L, Collections.emptyList(), Collections.emptyList());
+            STREAM0, 0L, StreamState.OPENED, 0L, Collections.emptyList(), Collections.emptyList());
         List<ApiMessageAndVersion> delta0Records = new ArrayList<>();
         S3StreamMetadataDelta delta0 = new S3StreamMetadataDelta(image0);
         // 1. create streamObject0 and streamObject1
         delta0Records.add(new ApiMessageAndVersion(new S3StreamObjectRecord()
-                .setObjectId(0L)
-                .setStreamId(STREAM0)
-                .setStartOffset(0L)
-                .setEndOffset(100L), (short) 0));
+            .setObjectId(0L)
+            .setStreamId(STREAM0)
+            .setStartOffset(0L)
+            .setEndOffset(100L), (short) 0));
         delta0Records.add(new ApiMessageAndVersion(new S3StreamObjectRecord()
-                .setObjectId(1L)
-                .setStreamId(STREAM0)
-                .setStartOffset(100L)
-                .setEndOffset(200L), (short) 0));
+            .setObjectId(1L)
+            .setStreamId(STREAM0)
+            .setStartOffset(100L)
+            .setEndOffset(200L), (short) 0));
         RecordTestUtils.replayAll(delta0, delta0Records);
         // verify delta and check image's write
         S3StreamMetadataImage image1 = new S3StreamMetadataImage(
-                STREAM0, 0L, StreamState.OPENED, 0L, Collections.emptyList(), List.of(
-                new S3StreamObject(0L, 999, STREAM0, 0L, 100L),
-                new S3StreamObject(1L, 999, STREAM0, 100L, 200L)));
+            STREAM0, 0L, StreamState.OPENED, 0L, Collections.emptyList(), List.of(
+            new S3StreamObject(0L, 999, STREAM0, 0L, 100L),
+            new S3StreamObject(1L, 999, STREAM0, 100L, 200L)));
         assertEquals(image1, delta0.apply());
         testToImageAndBack(image1);
 
@@ -171,14 +171,30 @@ public class S3StreamMetadataImageTest {
         List<ApiMessageAndVersion> delta1Records = new ArrayList<>();
         S3StreamMetadataDelta delta1 = new S3StreamMetadataDelta(image1);
         delta1Records.add(new ApiMessageAndVersion(new RemoveS3StreamObjectRecord()
-                .setObjectId(0L), (short) 0));
+            .setObjectId(0L), (short) 0));
         RecordTestUtils.replayAll(delta1, delta1Records);
         // verify delta and check image's write
         S3StreamMetadataImage image2 = new S3StreamMetadataImage(
-                STREAM0, 0L, StreamState.OPENED, 0L, Collections.emptyList(), List.of(
-                new S3StreamObject(1L, 999, STREAM0, 100L, 200L)));
+            STREAM0, 0L, StreamState.OPENED, 0L, Collections.emptyList(), List.of(
+            new S3StreamObject(1L, 999, STREAM0, 100L, 200L)));
         assertEquals(image2, delta1.apply());
         testToImageAndBack(image2);
+    }
+
+    @Test
+    public void testGetRangeContainsOffset() {
+        List<RangeMetadata> ranges = List.of(
+            new RangeMetadata(STREAM0, 0L, 1, 0, 10, 100),
+            new RangeMetadata(STREAM0, 1L, 2, 10, 10, 101),
+            new RangeMetadata(STREAM0, 2L, 3, 10, 20, 102),
+            new RangeMetadata(STREAM0, 3L, 4, 20, 0, 103)
+        );
+        S3StreamMetadataImage image = new S3StreamMetadataImage(
+            STREAM0, 3L, StreamState.OPENED, 0L, ranges, Collections.emptyList());
+        Assertions.assertEquals(0, image.getRangeContainsOffset(0));
+        Assertions.assertEquals(0, image.getRangeContainsOffset(5));
+        Assertions.assertEquals(2, image.getRangeContainsOffset(10));
+        Assertions.assertEquals(3, image.getRangeContainsOffset(100));
     }
 
     private void testToImageAndBack(S3StreamMetadataImage image) {
